--- a/composer.json
+++ b/composer.json
@@ -36,10 +36,8 @@
             "php htdocs/artisan clear-compiled",
             "php htdocs/artisan optimize"
         ],
-        "pre-update-cmd": [
-            "php htdocs/artisan clear-compiled"
-        ],
         "post-update-cmd": [
+            "php htdocs/artisan clear-compiled",
             "php htdocs/artisan optimize"
         ],
         "post-root-package-install": [
@@ -51,5 +49,7 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
