--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@
 applications:
 - name: foodiee
   memory: 512M
-  buildpack: https://github.com/cloudfoundry/php-buildpack#v4.3.0
+  buildpack: https://github.com/cloudfoundry/php-buildpack
   env:
     CF_STAGING_TIMEOUT: 15
     CF_STARTUP_TIMEOUT: 15
