--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "intervention/image": "^2.3"
     },
     "require-dev": {
-	
+		"fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1"
